--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;1,300;1,400&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="shortcut icon" href="images/geometric.png">
-    
 </head>
+
 <body>
-    
+    <!-- Lets begin by making the main page -->
+
+    <section class="front-page">
+        <nav>
+            <ul class="navigation-menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SKILLS</a></li>
+                <li><a href="#">PROJECTS</a></li>
+            </ul>
+        </nav>
+    </section>
 </body>
+
 </html>
