logo has been added

--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
     <!-- Lets begin by making the main page -->
 
     <section class="front-page">
-        <nav>
-            <ul class="navigation-menu">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SKILLS</a></li>
-                <li><a href="#">PROJECTS</a></li>
-            </ul>
-        </nav>
+        <div class="front-page-content">
+            <header>
+                <div class="mylogo">
+                    <img src="images/geometric.png">
+                </div>
+                <nav>
+                    <ul class="navigation-menu">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">SKILLS</a></li>
+                        <li><a href="#">PROJECTS</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
     </section>
 </body>
 
