--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 </div>
                 <nav>
                     <ul class="navigation-menu">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">SKILLS</a></li>
-                        <li><a href="#">PROJECTS</a></li>
+                        <li><a href="#" class="movingunderline">Home</a></li>
+                        <li><a href="#" class="movingunderline">About</a></li>
+                        <li><a href="#" class="movingunderline">Skills</a></li>
+                        <li><a href="#" class="movingunderline">Projects</a></li>
                     </ul>
                 </nav>
             </header>
