My image has been added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             </header>
         </div>
     </section>
+
+    
+    <div class="homecontent">
+        <div class="myphoto">
+            <img src="images/smallme.jpg">
+        </div>
+    </div>
 </body>
 
 </html>
