Heading and some intro has been added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         <div class="myphoto">
             <img src="images/smallme.jpg">
         </div>
+        <div class="hometext">
+            <h1>Wagwan my people!</h1>
+            <p>My name is Nicholas Bradley Omondi and this here is a representation of several 
+                templates combined into one with my own design to show you what I have been 
+                able to learn in this past week"
+            </p>
+        </div>
     </div>
 </body>
 
