--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Wagwan my people!</h1>
             <p>My name is Nicholas Bradley Omondi and this here is a representation of several 
                 templates combined into one with my own design to show you what I have been 
-                able to learn in this past week"
+                able to learn in this past week."
             </p>
         </div>
     </div>
