My skill section is done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;1,300;1,400&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="shortcut icon" href="images/geometric.png">
 </head>
@@ -41,10 +42,45 @@
             <h1>Wagwan my people!</h1>
             <p>My name is Nicholas Bradley Omondi and this here is a representation of several 
                 templates combined into one with my own design to show you what I have been 
-                able to learn in this past week."
+                able to learn in this past week
             </p>
         </div>
     </div>
+
+    <div class="about">
+        <div class="aboutcontent">
+            <h2>This is what you should know about me</h2>
+            <p>My skills are: </p>
+
+                <p>CSS:</p>            
+                <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div> 
+
+                <br> 
+
+                <p>HTML:</p>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <br>
+
+                <p>Bootstrap:</p>
+                <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <br>
+
+                <p>A good listener:</p>
+                <div class="progress">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            
+        </div>
+    </div>
+
 </body>
 
 </html>
