--- a/index.html
+++ b/index.html
@@ -49,26 +49,28 @@
 
     <div class="about">
         <div class="aboutcontent">
+            <h1>About:</h1>
+            <br>
             <h2>This is what you should know about me</h2>
             <p>My skills are: </p>
 
                 <p>CSS:</p>            
                 <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                 </div> 
 
                 <br> 
 
                 <p>HTML:</p>
                 <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
 
                 <br>
 
                 <p>Bootstrap:</p>
                 <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
 
                 <br>
@@ -77,6 +79,9 @@
                 <div class="progress">
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
+
+                <br>
+                <p>I know it is a bit conceited that I've put good listener as 100%</p>
             
         </div>
     </div>
