Projects session complete

--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
         </div>
     </div>
 
+    <div class="projects">
+        <div class="projectscontent">
+            <h1>Projects done so far:</h1>
+            <p>Ever since starting my course work at Moringa
+                we have done a few projects and below is a list of some of them with links
+            </p>
+            <ul>
+                <li><a href="" class="projectslist">Box Model</a></li>
+                <li><a href="" class="projectslist">Mangoes</a></li>
+                <li><a href="" class="projectslist">Wild Cats</a></li>
+            </ul>
+            <br>
+            <p>Thank you for visiting my portfolio. I hope you learnt something small about me.</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
