--- a/index.html
+++ b/index.html
@@ -52,37 +52,50 @@
             <h1>About:</h1>
             <br>
             <h2>This is what you should know about me</h2>
-            <p>My skills are: </p>
+            <p>As you know my name is Nicholas. I am relatively young
+                and I just finished studying engineering at UoN.
+                I joined Moringa School since I have a passion for programming
+                and with COVID-19 the online presence has increased and it will
+                lead to more opportunities that I would like to take up.
+            </p>
+            <br>
+            <p>I haven't had much experience in the working field but 
+                hopefully with my time in Moringa School I will be able to hit the 
+                ground running.
+            </p>
+            <br>
+            <p>With the first week I believe i can quantify my skills as follows:
 
-                <p>CSS:</p>            
-                <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                </div> 
+            </p>
+            <p>CSS:</p>            
+            <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+            </div> 
 
-                <br> 
+            <br> 
 
-                <p>HTML:</p>
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+            <p>HTML:</p>
+            <div class="progress">
+                <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
 
-                <br>
+            <br>
 
-                <p>Bootstrap:</p>
-                <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+            <p>Bootstrap:</p>
+            <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
 
-                <br>
+            <br>
 
-                <p>A good listener:</p>
-                <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+            <p>A good listener:</p>
+            <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
 
-                <br>
-                <p>I know it is a bit conceited that I've put good listener as 100%</p>
-            
+            <br>
+            <p>I know it is a bit conceited that I've put good listener as 100%</p>
+        
         </div>
     </div>
 
