font readded in CSS

--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
 
     <section class="front-page">
         <div class="front-page-content">
-            <header>
-                <div class="mylogo">
-                    <img src="images/geometric.png">
-                </div>
-                <nav>
-                    <ul class="navigation-menu">
-                        <li><a href="#" class="movingunderline">Home</a></li>
-                        <li><a href="#" class="movingunderline">About</a></li>
-                        <li><a href="#" class="movingunderline">Skills</a></li>
-                        <li><a href="#" class="movingunderline">Projects</a></li>
-                    </ul>
-                </nav>
-            </header>
+            <a href="#" class="mywebsitelogo">
+                <img src="images/geometric.png">
+            </a>
+            <nav>
+                <ul class="navigation-menu">
+                    <li><a href="#" class="movingunderline">Home</a></li>
+                    <li><a href="#" class="movingunderline">About and Skills</a></li>
+                    <li><a href="#" class="movingunderline">Projects</a></li>
+                </ul>
+            </nav>
         </div>
     </section>
 
@@ -49,7 +46,7 @@
 
     <div class="about">
         <div class="aboutcontent">
-            <h1>About:</h1>
+            <h1>About and Skills:</h1>
             <br>
             <h2>This is what you should know about me</h2>
             <p>As you know my name is Nicholas. I am relatively young
