--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <img src="images/geometric.png">
             </a>
             <ul class="navigation-menu">
-                <li><a href="#" class="movingunderline">Home</a></li>
-                <li><a href="#" class="movingunderline">About and Skills</a></li>
-                <li><a href="#" class="movingunderline">Projects</a></li>
+                <li><a href="#homesect" class="movingunderline">Home</a></li>
+                <li><a href="#abssect" class="movingunderline">About and Skills</a></li>
+                <li><a href="#projectssect" class="movingunderline">Projects</a></li>
             </ul>
         </nav>
     </div>
@@ -33,7 +33,7 @@
             <img src="images/smallme.jpg">
         </div>
         <div class="hometext">
-            <h1>Welcome to my Portfolio</h1>
+            <h1 id="homesect">Welcome to my Portfolio!</h1>
             <p>My name is Nicholas Bradley Omondi and this here is a representation of several 
                 templates combined into one with my own design to show you what I have been 
                 able to learn in this past week
@@ -46,7 +46,7 @@
     <div class="about">
         <div class="container">
             <div class="abs-heading">
-                <h1>About and Skills:</h1>
+                <h1 id="abssect">About and Skills:</h1>
             </div>
             <div class="row">
                 <div class="col-md-6">
@@ -106,7 +106,7 @@
 
     <div class="container">
         <div class="abs-heading">
-            <h1>Projects:</h1>
+            <h1 id="projectssect">Projects:</h1>
         </div>
         <br>
         <div class="row">
